# virg-nexus

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  nx_h2py.sh  virg-nexus.pc.in  virg_nexus_header.el
bench/: CMakeLists.txt
bench/ransac/: CMakeLists.txt  run.sh
ext/: CMakeLists.txt
ext/blas/: Android.mk  CMakeLists.txt  dgbmv.c  dgemm.c  dgemv.c  dspmv.c  dsymm.c  dsymv.c  dsyr2k.c  sgbmv.c  sgemm.c  sgemv.c  ssyr2k.c  ssyrk.c
ext/clapack/: Android.mk  CMakeLists.txt
ext/f2c/: Android.mk  CMakeLists.txt  ftell64_.c  lbitbits.c  lread.c  rsfe.c  rsne.c  sue.c  sysdep1.h
include/virg/nexus/: nx_affine_warp_processor.h  nx_alloc.h  nx_array.h  nx_assert.h  nx_bit_ops.h  nx_brief_extractor.h  nx_camera.h  nx_checkerboard_detector.h  nx_colorspace.h  nx_config.h  nx_config.h.in  nx_csv_lexer.h  nx_csv_parser.h  nx_data_frame.h  nx_epipolar.h  nx_fast_detector.h  nx_filesystem.h  nx_filter.h  nx_float_image.h  nx_gaussian_sampler.h  nx_gc.h  nx_gl.h  nx_gl_buffer.h  nx_gl_program.h  nx_gl_shader.h  nx_gnuplot.h  nx_graph.h  nx_harris_detector.h  nx_hash_sha256.h  nx_homography.h  nx_image.h  nx_image_io.h  nx_image_io_jpeg.h  nx_image_io_params.h  nx_image_io_png.h  nx_image_io_pnm.h  nx_image_pyr.h  nx_image_pyr_builder.h  nx_image_warp.h  nx_io.h  (+54 more)
include/virg/nexus/GL/: nx_gl.h  nx_gl_buffer.h  nx_gl_program.h  nx_gl_projection.h  nx_gl_shader.h
lib/python/PyNexus/: Image.py  __init__.py
lib/python/pynexus/: __init__.py  brief_extractor.py  fast.py  fast_detector.py  float_image.py  image.py  image_io.py  image_pyr.py  image_pyr_builder.py  image_warp.py  keypoint.py  keypointvector.py
lib/python/pynexus/wrappers/: __init__.py  nxbriefextractor.py  nxfastdetector.py  nxfloatimage.py  nximage.py  nximagepyr.py  nximagepyrbuilder.py  nxkeypointvector.py
py/: PyNexus.py
py/PyNexus/: Alloc.py  Image.py  MemBlock.py  __init__.py
pynexus/: requirements.txt  setup.py
pyvirg/: requirements.txt  setup.py
pyvirg/docs/source/: conf.py  index.rst
pyvirg/tests/tests_nexus/: test_options.py
pyvirg/virg/: __init__.py
pyvirg/virg/nexus/: __init__.py  options.py
src/: nx_affine_warp_processor.c  nx_alloc.c  nx_array.c  nx_bit_ops.c  nx_brief_extractor.c  nx_camera.c  nx_checkerboard_detector.c  nx_color_map_data.h  nx_colorspace.c  nx_csv_lexer.c  nx_csv_parser.c  nx_data_frame.c  nx_epipolar.c  nx_fast_detector.c  nx_filesystem.c  nx_filter.c  nx_float_image.c  nx_gaussian_sampler.c  nx_gc_cairo_imp.c  nx_gl.c  nx_gl_buffer.c  nx_gl_program.c  nx_gl_shader.c  nx_gnuplot.c  nx_graph.c  nx_harris_detector.c  nx_hash_sha256.c  nx_homography.c  nx_image.c  nx_image_io.c  nx_image_io_jpeg.c  nx_image_io_png.c  nx_image_io_pnm.c  nx_image_pyr.c  nx_image_pyr_builder.c  nx_image_warp.c  nx_io.c  nx_json_bundle.c  nx_json_lexer.c  nx_json_log.c  (+46 more)
src/GL/: nx_gl.c  nx_gl_buffer.c  nx_gl_program.c  nx_gl_projection.c  nx_gl_shader.c
src/SFMT/: SFMT-common.h  SFMT-params.h  SFMT-params19937.h  SFMT-sse2.h  SFMT.c  SFMT.h
src/fast/: LICENSE_FAST  fast_9.c  fast_nonmax.c
src/jsmn/: jsmn.c  jsmn.h
tests/: CMakeLists.txt  test_data.hh.in  tests_bit_ops.cc  tests_brief_extractor.cc  tests_camera.cc  tests_csv_lexer.cc  tests_csv_parser.cc  tests_data_frame.cc  tests_epipolar.cc  tests_fast_detector.cc  tests_filter.cc  tests_float_image.cc  tests_gc.cc  tests_gnuplot.cc  tests_graph.cc  tests_homography.cc  tests_image.cc  tests_image_pyr.cc  tests_json_lexer.cc  tests_json_options.cc  tests_lexer.cc  tests_main.cc  tests_mat.cc  tests_mem_block.cc  tests_options.cc  tests_options_cxx.cc  tests_pinhole.cc  tests_quaternion.cc  tests_rotation.cc  tests_sha256.cc  tests_statistics.cc  tests_string.cc  tests_string_array.cc  tests_svd.cc  tests_triangulation.cc
tests/data/: lena.ppm  sha256_long_msg.txt
tools/: CMakeLists.txt  nx_fit_homography_main.c  nx_harris_detector_main.c  nx_panorama_builder.c  nx_panorama_builder.h  nx_sift_benchmark_main.c  nx_sift_detector_main.c  nx_stitch_main.c  nx_usac.c  nx_usac.h  nx_usac_homography.c  nx_usac_homography.h  nx_warp_image_main.c  vg_stereo_matcher_main.cc
tools/man/: nx-harris-detector.1  nx-warp-image.1  vg-stereo-matcher.1
