set(blas_SOURCES
  dsdot.c
  dtrsm.c
  sgbmv.c
  ssyr2.c
  dasum.c
  dspmv.c
  dtrsv.c
  sgemm.c
  ssyr2k.c
  daxpy.c
  dspr2.c
  dzasum.c
  sgemv.c
  ssyr.c
  dcabs1.c
  dspr.c
  dznrm2.c
  sger.c
  ssyrk.c
  dcopy.c
  dswap.c
  icamax.c
  snrm2.c
  stbmv.c
  ddot.c
  dsymm.c
  idamax.c
  srot.c
  stbsv.c
  dgbmv.c
  dsymv.c
  isamax.c
  srotg.c
  stpmv.c
  dgemm.c
  dsyr2.c
  izamax.c
  srotm.c
  stpsv.c
  dgemv.c
  dsyr2k.c
  lsame.c
  srotmg.c
  strmm.c
  dger.c
  dsyr.c
  sasum.c
  ssbmv.c
  strmv.c
  dnrm2.c
  dsyrk.c
  saxpy.c
  sscal.c
  strsm.c
  drot.c
  dtbmv.c
  scabs1.c
  sspmv.c
  strsv.c
  drotg.c
  dtbsv.c
  scasum.c
  sspr2.c
  xerbla_array.c
  drotm.c
  dtpmv.c
  scnrm2.c
  sspr.c
  xerbla.c
  drotmg.c
  dtpsv.c
  scopy.c
  sswap.c
  dsbmv.c
  dtrmm.c
  sdot.c
  ssymm.c
  dscal.c
  dtrmv.c
  sdsdot.c
  ssymv.c)

add_library(virg_nexus_blas STATIC ${blas_SOURCES})
set_target_properties(virg_nexus_blas PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
install(TARGETS virg_nexus_blas ARCHIVE DESTINATION lib)

