set(clapack_SOURCES
  sgesvd.c
  sgetrf.c
  sgetri.c
  sgetrs.c
  sgesv.c
  sposv.c
  ssysv.c
  ssytrf.c
  ssytrs.c
  slasyf.c
  ssytf2.c
  slasyf.c
  ssytf2.c
  sgelss.c
  spotrf.c
  spotri.c
  spotrs.c
  spotf2.c
  slaswp.c
  srscl.c
  slabad.c
  sgetf2.c
  strtri.c
  slauum.c
  strti2.c
  slauu2.c
  slange.c
  sgebrd.c
  sgelqf.c
  sormbr.c
  sgeqrf.c
  slabrd.c
  sgelq2.c
  slarfg.c
  sormlq.c
  sormqr.c
  slassq.c
  slacpy.c
  slaset.c
  sorgbr.c
  sorgqr.c
  sbdsqr.c
  sorml2.c
  slapy2.c
  sorm2r.c
  sgeqr2.c
  sgebd2.c
  slartg.c
  slasr.c
  slasv2.c
  slas2.c
  slasq1.c
  sorgl2.c
  slasq4.c
  slasq5.c
  slasq6.c
  slaisnan.c
  slascl.c
  slasq2.c
  slasrt.c
  sorg2r.c
  slarf.c
  sorglq.c
  sisnan.c
  slasq3.c
  slarft.c
  slarfb.c
  slarfp.c
  slamch.c
  dgesvd.c
  dgetrf.c
  dgetri.c
  dgetrs.c
  dgesv.c
  dposv.c
  dsysv.c
  dsytrf.c
  dsytrs.c
  dlasyf.c
  dsytf2.c
  dlasyf.c
  dsytf2.c
  dgelss.c
  dpotrf.c
  dpotri.c
  dpotrs.c
  dpotf2.c
  dlaswp.c
  drscl.c
  dlabad.c
  dgetf2.c
  dtrtri.c
  dlauum.c
  dtrti2.c
  dlauu2.c
  dlange.c
  dgebrd.c
  dgelqf.c
  dormbr.c
  dgeqrf.c
  dlabrd.c
  dgelq2.c
  dlarfg.c
  dormlq.c
  dormqr.c
  dlassq.c
  dlacpy.c
  dlaset.c
  dorgbr.c
  dorgqr.c
  dbdsqr.c
  dorml2.c
  dlapy2.c
  dorm2r.c
  dgeqr2.c
  dgebd2.c
  dlartg.c
  dlasr.c
  dlasv2.c
  dlas2.c
  dlasq1.c
  dorgl2.c
  dlasq4.c
  dlasq5.c
  dlasq6.c
  dlaisnan.c
  dlascl.c
  dlasq2.c
  dlasrt.c
  dorg2r.c
  dlarf.c
  dorglq.c
  disnan.c
  dlasq3.c
  dlarft.c
  dlarfb.c
  dlarfp.c
  dlamch.c
  ilaenv.c
  ilaslc.c
  ilaslr.c
  ieeeck.c
  iparmq.c
  iladlc.c
  iladlr.c)

add_library(virg_nexus_clapack STATIC ${clapack_SOURCES})
set_target_properties(virg_nexus_clapack PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
install(TARGETS virg_nexus_clapack ARCHIVE DESTINATION lib)

