set(f2c_SOURCES
  abort_.c
  d_cnjg.c
  d_sinh.c
  l_lt.c
  r_asin.c
  r_sin.c
  system_.c
  d_cos.c
  d_sqrt.c
  ftell_.c
  i_ceiling.c
  lread.c
  r_atan.c
  r_sinh.c
  typesize.c
  backspac.c
  d_cosh.c
  d_tan.c
  i_dim.c
  lwrite.c
  r_atn2.c
  rsli.c
  uio.c
  c_abs.c
  d_dim.c
  d_tanh.c
  getenv_.c
  i_dnnt.c
  r_cnjg.c
  rsne.c     
  cabs.c
  derf_.c
  dtime_.c
  h_abs.c
  i_indx.c
  open.c
  r_cos.c
  r_sqrt.c
  util.c
  c_cos.c
  derfc_.c
  due.c
  h_dim.c
  iio.c
  pow_ci.c
  r_cosh.c
  r_tan.c
  wref.c
  c_div.c
  d_exp.c
  ef1asc_.c
  h_dnnt.c
  i_len.c
  pow_dd.c
  rdfmt.c
  r_tanh.c
  wrtfmt.c
  c_exp.c
  dfe.c
  ef1cmc_.c
  h_indx.c
  i_len_trim.c
  pow_di.c
  r_dim.c
  s_cat.c
  wsfe.c
  c_log.c
  d_imag.c
  endfile.c
  h_len.c
  ilnw.c
  pow_hh.c
  rewind.c
  s_cmp.c
  wsle.c
  close.c
  d_int.c
  erf_.c
  hl_ge.c
  i_mod.c
  pow_ii.c
  r_exp.c
  s_copy.c
  wsne.c
  c_sin.c
  d_lg10.c
  erfc_.c
  hl_gt.c
  i_nint.c
  r_imag.c
  sfe.c
  xwsne.c
  c_sqrt.c
  d_log.c
  err.c
  hl_le.c
  inquire.c
  pow_ri.c
  r_int.c
  sig_die.c
  z_abs.c
  ctype.c
  d_mod.c
  etime_.c
  hl_lt.c
  i_sign.c
  pow_zi.c
  r_lg10.c
  signal_.c
  z_cos.c
  d_abs.c
  d_nint.c
  exit_.c
  h_mod.c
  lbitbits.c
  pow_zz.c
  r_log.c
  z_div.c
  d_acos.c
  dolio.c
  f77_aloc.c
  h_nint.c
  lbitshft.c
  r_mod.c
  s_paus.c
  z_exp.c
  d_asin.c
  d_prod.c
  f77vers.c
  h_sign.c
  l_ge.c
  r_nint.c
  s_rnge.c
  z_log.c
  d_atan.c
  d_sign.c
  fmt.c
  i77vers.c
  l_gt.c
  r_abs.c
  rsfe.c
  s_stop.c
  z_sin.c
  d_atn2.c
  d_sin.c
  fmtlib.c
  i_abs.c
  l_le.c
  r_acos.c
  r_sign.c
  sue.c
  z_sqrt.c)

add_library(virg_nexus_f2c STATIC ${f2c_SOURCES})
set_target_properties(virg_nexus_f2c PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
install(TARGETS virg_nexus_f2c ARCHIVE DESTINATION lib)

